# fast_ms_redis

./: app.py  connection.py  pyproject.toml
docker/: docker-compose-redis.yml
modules/: orders.py  produtos.py
