[tool.poetry]
name = "microservice"
version = "0.1.0"
description = ""
authors = ["Renato Blasco <renatoblascodev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
httpx = "^0.27.0"
redis-om = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
